[package]
name = "ecb"
version = "0.2.0-pre"
description = "Electronic Codebook (ECB) block cipher mode of operation"
authors = ["RustCrypto Developers", "magic-akari"]
license = "MIT"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
documentation = "https://docs.rs/ecb"
repository = "https://github.com/magic-akari/ecb"
keywords = ["crypto", "block-mode", "ciphers"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = "=0.5.0-pre.7"

[dev-dependencies]
aes = "=0.9.0-pre.2"
cipher = { version = "=0.5.0-pre.7", features = ["dev"] }
hex-literal = "0.3.4"

[features]
default = ["block-padding"]
alloc = ["cipher/alloc"]
std = ["cipher/std", "alloc"]
block-padding = ["cipher/block-padding"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
